# me_std

./: .cmake-format.yaml  .gitignore  .gitmodules  .releaserc.yaml  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  dependencies.cmake  package_bootstrap.cmake  setup.cmake
.github/workflows/: build.yaml  codeql-analysis.yml  publish.yaml  release.yaml
impl/: CMakeLists.txt
impl/inc/me_std/: optional_ref.hpp
me_std/: CMakeLists.txt  bootstrap.cmake  conanfile.py  package_bootstrap_conanfile.txt
me_std/impl/: CMakeLists.txt
me_std/impl/inc/me_std/: safe_ref.hpp
me_std/impl/src/me_std/: test.empty.cpp  test.optional_ref.cpp  test.safe_ref.cpp
me_std/test_package/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt  optional_ref.cpp
test_package/: CMakeLists.txt  conanfile.py
